[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "audio-analysis-mcp"
version = "2.0.0"
description = "MCP server for audio analysis — split clips via FFmpeg, analyze with local or cloud AI models"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    {name = "gwyntel"},
]
keywords = ["mcp", "audio", "analysis", "gemma4", "gemini", "apple-silicon", "mlx"]
dependencies = [
    "fastmcp>=2.0",
    "google-genai>=1.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.scripts]
audio-analysis-mcp = "audio_analysis.server:main"

[tool.setuptools.packages.find]
where = ["src"]
